# pyproject_boilerplate

./: .gitignore  Makefile  README.md  argparse2man.py  changelog.sh  help2mdman.py  pyproject.toml
build_scripts/: changelog.sh
debian/: README.Debian  changelog  control  copyright  files  mymodule.postinst.debhelper  mymodule.prerm.debhelper  mymodule.substvars  rules
src/mymodule/: __init__.py  whatcani.py
test/: test_foo.py
tests/: __init__.py  test_foo.py
