[project]
dynamic = ["version"]
name = "mypackage"
description = "A sample Python package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["ionos-cloud", "ops-tools"]
authors = [
  {email = "max.mustermann@ionos.com"},
  {name = "Max Mustermann"}
]
maintainers = [
  {name = "Tommy Atkins", email = "tommy.atkins@ionos.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
    "jinja2"
]

[project.optional-dependencies] 
dev = [
    "black",
    "pylint",
    "isort",
    "coverage",
    "toml-cli",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project.scripts]
ohoo = "mymodule:main"

